--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@originjs/vite-plugin-content": "^1.0.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.0.13"
   }
 }
