--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
     "less": "^4.3.0",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11"
   },
   "packageManager": "pnpm@10.6.1+sha512.40ee09af407fa9fbb5fbfb8e1cb40fbb74c0af0c3e10e9224d7b53c7658528615b2c92450e74cfad91e3a2dcafe3ce4050d80bda71d757756d2ce2b66213e9a3",
@@ -19,5 +20,10 @@
     "@originjs/vite-plugin-content": "^1.0.5",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.0.13"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
