chore: new regional tag

--- a/src/content/photos/PXL_20250302_050528160.yaml
+++ b/src/content/photos/PXL_20250302_050528160.yaml
@@ -10,6 +10,7 @@ detail: >-
   a dark-colored train compartment can be seen. The sky above is slightly overcast.
 tags: 
   - xpt-set
+  - regional
 author: azyrite
 edited: false
 approxLocation: Central, Platform 3
