--- a/src/content/photos/PXL_20250302_050714806.yaml
+++ b/src/content/photos/PXL_20250302_050714806.yaml
@@ -9,6 +9,9 @@ detail: >-
 notes: Aren't those copper-tinted windows just gorgeous?
 tags:
   - xpt-set
+  - regional
 approxLocation: Central, Platform 3
 author: azyrite
 edited: false
+related: 
+  - PXL_20250302_050902071
