--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/node": "^9.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
+    "exifr": "^7.1.3",
     "less": "^4.3.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.11"
